# AiWorkOS

./: .gitignore  README.md  chatgpt-app-manifest.json  pyproject.toml
backend/: __init__.py  api.py  config.py  main.py  models.py
backend/agents/: __init__.py  marketing.py  orchestrator.py  registry.py  tools.py
backend/db/: repository.py
backend/mcp_server/: schemas.py  server.py  service.py  store.py
backend/workflows/: __init__.py  decomposer.py  engine.py
